[package]
name = "historical-ngram-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-stemmers = "1.2"
tantivy = "0.24"
rayon = "1.8"
rustc-hash = "2.1"
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.18"
sbbf-rs-safe = "0.3"
wyhash = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

